--- a/assignments/assignment_2.ipynb
+++ b/assignments/assignment_2.ipynb
@@ -154,14 +154,14 @@
         "\n",
         "Spike events reflect the activity of individual neurons and therefore can give important insights into the nature of the disease. However, a single electrode will typically pick up signals from more than one neuron at a time. While this might not be an issue for locating the seizure focus, research questions related to the mechanisms behind epileptic seizures often require a more detailed understanding of which neuron was active at what time. So how can we figure out the how many neurons were contributing to our signal and when each of them was active?\n",
         "\n",
-        "To do this we will use an unsupervised clustering algorithm (K-means clustering) to sort our spike data. However, the first thing we need to do is decide what features of our spike wave forms we want to feed into our algorithm.  To do this, we will apply principal component analysis (PCA) and use the principal components as features. While before each spike wave form was represented by 90 samples the dimensionality is now reduced to only three features which allow us to assign each spike to a cluster.\n",
+        "To do this we will use an unsupervised clustering algorithm (K-means clustering) to sort our spike data. However, the first thing we need to do is decide what features of our spike wave forms we want to feed into our algorithm.  To do this, we will apply principal component analysis (PCA) and use the principal components as features. While before each spike wave form was represented by 9 samples (in part a) the dimensionality is now reduced to only three features which allow us to assign each spike to a cluster.\n",
         "\n",
         "All that's left is deciding how many clusters we expect to find.  From literature review, we expect not to find more than two or three separable clusters from a single electrode recording. However, we'll also run the K-means function several times on our data and increase the number of clusters with every run.  That way we can decide based on the 'Elbow method'. Ready? Let's go...\n",
         "\n",
         "\n",
         "**Your objective**. For this dataset, you'll perform an analysis to attribute spikes to neurons.  Let's break it down:\n",
         "\n",
-        "a. Load in the data and plot the wave forms on one plot.\n",
+        "a. Load in the data and plot the wave forms on one plot.  The data are arranged as #spikes (2401) by #samples (100).  To do this randomly sample 100 spikes and plot those wave forms on one plot.  I have some code below to help get started with this.\n",
         "\n",
         "b. Principal component analysis (PCA) is a dimensionality reduction method which requires normalized data.  Use `Scikit Learn` for both the normalization (`MinMaxScaler()`) and `PCA` (you can use `n_components=12`).\n",
         "\n",
@@ -180,6 +180,30 @@
       "source": [
         "**ANSWER**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wave_form_pd = pd.read_csv('wave_form.csv')\n",
+        "wave_form = wave_form_pd.to_numpy()\n",
+        "np.random.seed(10)\n",
+        "fig, ax = plt.subplots(figsize=(15, 5))\n",
+        "\n",
+        "for i in range(100):\n",
+        "    spike = np.random.randint(0, wave_form.shape[0])\n",
+        "    ax.plot(...) # Plot that spike (you fill this in!)\n",
+        "\n",
+        "ax.set_xlim([0, 90])\n",
+        "ax.set_xlabel('# sample', fontsize=20)\n",
+        "ax.set_ylabel('amplitude [uV]', fontsize=20)\n",
+        "ax.set_title('spike waveforms', fontsize=23)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "JQgvMfaIE3fo"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
